--- a/spring-security-demo-03-custom-login-form/pom.xml
+++ b/spring-security-demo-03-custom-login-form/pom.xml
@@ -62,6 +62,11 @@
 			<artifactId>spring-security-web</artifactId>
 			<version>${springSecurity.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-taglibs</artifactId>
+			<version>${springSecurity.version}</version>
+		</dependency>
 	</dependencies>
 
 	<!-- TO DO: Add support for Maven WAR Plugin -->
